deploy: b4d33e22cd547f7223781cb381e41d2ca7a73364

--- a/studynotes/0.1/Git/overview.html
+++ b/studynotes/0.1/Git/overview.html
@@ -639,8 +639,8 @@ be added in issue #124</p>
 <div class="sect1">
 <h2 id="_versioning"><a class="anchor" href="#_versioning"></a>Versioning</h2>
 <div class="sectionbody">
+<h2 id="_version_numbers" class="discrete">Version numbers</h2>
 <div class="paragraph">
-<div class="title">Version numbers</div>
 <p><code>major.minor[.build[.revision]]</code></p>
 </div>
 <div class="paragraph">
@@ -666,8 +666,8 @@ During CD release components are pushed to a component repository such as Nuget,
 </li>
 </ul>
 </div>
+<h2 id="_semantic_versioning" class="discrete">Semantic Versioning</h2>
 <div class="paragraph">
-<div class="title">Semantic Versioning</div>
 <p>Semantic Versioning is a concept of calculating the version number automatically based on a certain source code repository.</p>
 </div>
 <div class="paragraph">
