--- a/studynotes/0.1/FSharp/CombineMethod.html
+++ b/studynotes/0.1/FSharp/CombineMethod.html
@@ -116,6 +116,13 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="0">
+<ul class="nav-list">
+  <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="../azure_iot/overview.html">Azure IoT</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </nav>
 </div>
