deploy: 9a3a7e41565219e115d4fc81079a02fe7b7dceb4

--- a/studynotes/0.1/azure_iot/overview.html
+++ b/studynotes/0.1/azure_iot/overview.html
@@ -294,9 +294,9 @@
 <div class="openblock">
 <div class="content">
 <div class="paragraph">
-<p>Data flow Scenarios
-'''</p>
+<p>Data flow Scenarios</p>
 </div>
+<hr>
 <div class="ulist">
 <div class="title">Scenario 1</div>
 <ul>
