deploy: af12527d041d5b7da8ac5e02b2aca9fece81662a

--- a/404.html
+++ b/404.html
@@ -38,34 +38,34 @@
 <div class="nav-panel-explore is-active" data-panel="explore">
   <ul class="components">
     <li class="component">
-      <a class="title" href="/azurearchitecturestarterpack/1/index.html">Azure Architecture Starter Pack</a>
+      <a class="title" href="/azurearchitecturestarterpack/current/index.html">Azure Architecture Starter Pack</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/azurearchitecturestarterpack/1/index.html">1-beta.1</a>
+          <a href="/azurearchitecturestarterpack/current/index.html">1-beta.1</a>
         </li>
       </ul>
     </li>
     <li class="component">
-      <a class="title" href="/homesite/1.0.0/index.html">Home page</a>
+      <a class="title" href="/homesite/current/index.html">Home page</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/homesite/1.0.0/index.html">1.0.0</a>
+          <a href="/homesite/current/index.html">1.0.0</a>
         </li>
       </ul>
     </li>
     <li class="component">
-      <a class="title" href="/projectstarterpack/1.0.0/inline-text-formatting.html">New Project Starter Pack</a>
+      <a class="title" href="/projectstarterpack/current/inline-text-formatting.html">New Project Starter Pack</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/projectstarterpack/1.0.0/inline-text-formatting.html">1.0.0</a>
+          <a href="/projectstarterpack/current/inline-text-formatting.html">1.0.0</a>
         </li>
       </ul>
     </li>
     <li class="component">
-      <a class="title" href="/studynotes/0.1/index.html">Study Notes</a>
+      <a class="title" href="/studynotes/index.html">Study Notes</a>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/studynotes/0.1/index.html">0.1</a>
+          <a href="/studynotes/index.html">default</a>
         </li>
       </ul>
     </li>
@@ -77,7 +77,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="/homesite/1.0.0/index.html" class="home-link"></a>
+  <a href="/homesite/current/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
 </nav>
 </div>
@@ -85,7 +85,7 @@
 <article class="doc">
 <h1 class="page">Page Not Found</h1>
 <div class="paragraph">
-<p>The page you&#8217;re looking for does not exist. It may have been moved. You can return to the <a href="/homesite/1.0.0/index.html">start page</a>, or follow one of the links in the navigation to the left.</p>
+<p>The page you&#8217;re looking for does not exist. It may have been moved. You can return to the <a href="/homesite/current/index.html">start page</a>, or follow one of the links in the navigation to the left.</p>
 </div>
 <div class="paragraph">
 <p>If you arrived on this page by clicking on a link, please notify the owner of the site that the link is broken.
