deploy: af12527d041d5b7da8ac5e02b2aca9fece81662a

--- a/studynotes/azure_iot/overview.html
+++ b/studynotes/azure_iot/overview.html
@@ -4876,7 +4876,11 @@ Endpoint
 <div class="ulist">
 <ul>
 <li>
-<p>Azure IoT Edge en</p>
+<p>Azure IoT Edge enables you to scale out your IoT solution by packaging your business logic into standard containers.</p>
+</li>
+<li>
+<p>You can deploy these containers to any of your devices and monitor it all from the cloud.
+*</p>
 </li>
 </ul>
 </div>
